feat(authentication): add api to change password
